# geofence

./: .env.example  .gitignore  ANALYSIS_06_BATCH_ALGORITHMS.md  CLAUDE.md  Project.qgz  README.md  apple-container-setup.sh  docker-compose.yml  package-lock.json  package.json  pgbouncer.ini  report.md  tsconfig.experiments.json  tsconfig.json
backend/: .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
backend/src/: db.ts  metrics.ts  server.ts
db/migrations/: 20260311000000_simplify_geometries.sql  20260312000000_hierarchy_boundaries.sql
db/scripts/: build_hierarchy.sql
docker/: prometheus.yml
docker/osm2pgsql/: Dockerfile
experiments/01_connection_pooling/: README.md  run.js  run.ts
experiments/02_batch_vs_single/: README.md  run.js  run.ts
experiments/03_parallel_batch/: README.md  run.js  run.ts
experiments/04_geometry_simplification/: README.md  accuracy.js  accuracy.ts  run.js  run.ts
experiments/05_batch_algorithms/: README.md  parity.ts  run-1000-only.ts  run.ts
experiments/06_batch_algorithms/: README.md  parity.ts  run-1000-only.ts  run.ts
experiments/06_spatial_tile_cache/: README.md  accuracy.ts  run.ts
experiments/07_bbox_filter_optimization/: README.md  accuracy.ts  run.ts
experiments/07_spatial_tile_cache/: README.md  run.ts
experiments/13_runtime_shootout/backends/axum/: Cargo.toml
experiments/13_runtime_shootout/backends/axum/src/: main.rs
k6/: k6-benchmark.js
profiler/: geofence.config.js  index.js  k6-runner.js  package.json  run.js
scripts/: import-osm.sh
tools/: explain-osm.sh  import-osm.sh
(+103 files in other folders)
