[package]
name = "geofence-backend-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "geofence-backend-axum"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
